# annotation-tool

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  RELEASE.md  _pyinstaller.txt  main.py  pyproject.toml  requirements.txt  sara.icns
.github/: changelog-config.json  detect-increment.sh
.github/workflows/: lint.yml  publish-to-pypi.yml  publish-to-testpypi.yml  release.yml
.gitlab/issue_templates/: Default.md  feature-request.md
.gitlab/merge_request_templates/: Default.md
.gitlab/pipelines/: bump-version.yml  deploy.yml  lint.yml  setup.yml
.gitlab/release_templates/: Default.md
__local__storage__/: config.json
__local__storage__/annotations/: Bronwnie_2_HE5KV_.pkl  Brownie_07_G2SP6_.pkl  Brownie_DKJAK_.pkl
__local__storage__/dataset_schemes/: Brownies_2BJQV_.pkl  Kitchen _CCWWV_.pkl  Kitchen without dependencies_66DV9_.pkl
annotation_tool/: __init__.py  gui.py  main_controller.py  mediator.py  network_video.py  playback.py  settings.py  user_actions.py
annotation_tool/annotation/: annotation_base.py  controller.py  timeline.py
annotation_tool/annotation/manual/: controller.py  main_widget.py  tool_widget.py
annotation_tool/annotation/retrieval/: controller.py  main_widget.py
annotation_tool/annotation/retrieval/retrieval_backend/: element.py  filter.py  filter_dialog.py  loader.py  query.py  queue.py
annotation_tool/data_model/: __init__.py  annotation.py  annotation_scheme.py  dataset.py  globalstate.py  media_type.py  model.py  project.py  sample.py  single_annotation.py
annotation_tool/dialogs/: annotation_dialog.py  annotation_list.py  dialog_manager.py  edit_datasets.py  import_annotation_dialog.py  load_annotation_dialog.py  local_files.py  network_list.py  new_annotation_dialog.py  settings_dialog.py
annotation_tool/file_cache/: __init__.py  _file_cache.py
annotation_tool/media/: media.py
annotation_tool/media/backend/: controller.py  controller_.py  controller_legacy.py  player.py  timer.py  timer_.py
annotation_tool/media/backend/type_specific_player/: mocap.py  video.py
annotation_tool/media_reader/: __init__.py  base.py  mocap.py  video.py  video_torchvision.py
annotation_tool/media_reader/mocap_readers/: __init__.py  base.py  cache.py  lara_reader.py
annotation_tool/media_reader/video_readers/: __init__.py  base.py  decord_reader.py  evaluation.py  opencv_reader.py  torchvision_reader.py
annotation_tool/network/: __init__.py  controller.py  controller_old.py
annotation_tool/network/LARa/: lara_specifics.py
annotation_tool/qt_helper_widgets/: checkable_combobox.py  histogram.py  line_edit_adapted.py  lines.py  own_slider.py
annotation_tool/utility/: decorators.py  filehandler.py  functions.py  resources.py
src/: adaptive_scroll_area.py  anno_tool.py  annotation_widget.py  display.py  display_current_sample.py  gui.py  gui_old.py  main_controller.py  media.py  mediator.py  mocap_visualizer.py  playback.py  retrieval_widget.py  settings.py  user_actions.py
src/annotation/: annotation_base.py  annotation_widget.py  controller.py  modes.py  timeline.py
src/annotation/manual/: controller.py  main_widget.py  tool_widget.py
src/annotation/retrieval/: controller.py  main_widget.py  tool_widget.py
src/annotation/retrieval/retrieval_backend/: element.py  filter.py  filter_dialog.py  interval.py  loader.py  old_controller_backup.py  query.py  query_filter.py  queue.py
src/data_classes/: __init__.py  annotation.py  annotation_scheme.py  colormapper.py  datasets.py  globalstate.py  sample.py  settings.py  singletons.py
src/data_model/: __init__.py  annotation.py  dataset.py  globalstate.py  model.py  network.py  project.py  sample.py  settings.py
src/dataclasses/: __init__.py  annotation.py  annotation_scheme.py  colormapper.py  datasets.py  globalstate.py  priority_queue.py  sample.py  settings.py
src/dialogs/: annotation_dialog.py  annotation_list.py  dialog_manager.py  edit_datasets.py  export_annotation_dialog.py  load_annotation_dialog.py  local_files.py  network_list.py  new_annotation_dialog.py  set_annotation.py  settings.py  settings_dialog.py  video_context_menu.py
src/file_cache/: _file_cache.py
src/media/: __init__.py  media.py  media_base.py  media_controller.py  media_player.py  media_types.py  mocap_reader.py  mocap_reading.py  mocap_visualizer.py  timer.py  video.py  video_backup.py  video_reader.py
src/media/backend/: controller.py  player.py  queue.py  timer.py
src/media/backend/type_specific_player/: mocap.py  mocap_new.py  video.py
src/media_backend/: controller.py  player.py  queue.py  timer.py  video.py
src/media_backend/type_specific_player/: mocap.py  video.py  videocopy.py
src/media_improved/: controller.py  player.py  timer.py
src/media_improved/type_specific_player/: mocap.py  video.py
src/media_old/: media_controller.py  media_player.py  video.py
src/media_reader/: __init__.py  base.py  mocap.py  video.py
src/network/: controller.py  lara_specifics.py  network.py
src/network/LARa/: attr_per_class.txt  lara_specifics.py
src/qt_helper_widgets/: adaptive_scroll_area.py  checkable_combobox.py  display_scheme.py  hist_copy.py  histogram.py  line_edit_adapted.py  lines.py  own_slider.py
src/retrieval/: controller.py  filter.py  filter_dialog.py  query.py
src/retrieval_backend/: controller.py  filter.py  filter_dialog.py  interval.py  mode.py  query.py  query_old.py
src/trash/: annotation_widget.py  cv2_video_player.py  cv2_video_player_2.py  dialogs.py  gui_alt.py  media_p.py  test.py  timeline.py
src/util/: functions.py  lines.py  util.py
src/utility/: breeze_resources.py  colormapper.py  decorators.py  file_cache.py  filehandler.py  functions.py  mocap_reader.py  networking.py
