[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "annotation-tool"
version = "0.5.0"
description = "Tool for annotating time series data from sources such as IMUs, MoCap, Videos and more."
readme = "README.md"
license = "MIT"
homepage = "https://gitlab.com/wilfer9008/annotation-tool"
authors = [
    "Fernando Moya Rueda <fernando.moya@cs.tu-dortmund.de>",
    "Erik Altermann <erik.altermann@tu-dortmund.de>",
    "Nilah Ravi Nair <nilah.nair@tu-dortmund.de>",
    "Philipp Oberdiek <git@oberdiek.net>",
    "Raphael Spiekermann <raphael.spiekermann@tu-dortmund.de>",
]
maintainers = []
packages = [
    { include = "src" },
    { include = "main.py" },
]

[tool.poetry.dependencies]
python = ">=3.8,<4"
distinctipy = "*"
filetype = "*"
matplotlib = "3.5.0"
numpy = "*"
opencv-python = "~4.5.3.56"
PyOpenGL = "*"
PyQt5 = [
    { version = "~5.14.2", markers = "sys_platform != 'win32'" },
    { version = "^5.15", markers = "sys_platform == 'win32'" },
]
pyqtgraph = "0.11.0"
scipy = "*"
torch = "~1.12.0"
sortedcontainers = "^2.4.0"
fcache = "^0.4.7"
qdarkstyle = "^3.1"

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
isort = "^5"
pyinstaller = "*"
toml = "*"
pre-commit = "^2.20.0"
commitizen = "^2.37.0"
cz-conventional-commits-ronmckay = "<1"
pylint = "^2.15.5"

[tool.poetry.scripts]
annotation-tool = 'main:start'

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 88

[tool.commitizen]
name = "cz_conventional_commits_ronmckay"
version = "0.5.0"
tag_format = "v$version"
major_version_zero = true
version_files = [
    "src/__init__.py:^__version__",
    "pyproject.toml:^version"
]
update_changelog_on_bump = true
changelog_incremental = true
annotated_tag = true
use_shortcuts = true
bump_message = "bump: Version $current_version → $new_version"
